# flight-deal-intelligence-wave1

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  daily-scheduler.yml
.streamlit/: secrets.toml.example
app/: page_utils.py  streamlit_app.py
docs/: BUILD_SCOPE_WAVE1.md  MENAT_CA_Fare_Deal_Intelligence_Employer_Plan.pdf:Zone.Identifier  SoW_FlightDeal_Stefan_v3.docx  SoW_FlightDeal_Stefan_v3.docx:Zone.Identifier  WAVE1_BUILD_VALIDATION_REPORT.md  Wave1_Airlines_Routes_v1.docx  Wave1_Airlines_Routes_v1.docx:Zone.Identifier
migrations/: 001_init.sql  002_grain_constraints.sql  003_detector_dedup_constraint.sql  004_qa_checks_external_flag.sql  005_alerts_dedup_constraint.sql  006_quota.sql  007_backtest.sql
scripts/: backup_postgres.sh  build_baselines.py  export_alerts.py  load_seed_data.py  refresh_fx.py  run_backtest.py  run_detector.py  run_scheduler.py  run_verifier.py  run_weekly_summary.py  seed_quota.py  send_email_alerts.py  smoke_amadeus.py
src/: __init__.py  config.py  db.py  db_helpers.py  logging_config.py  models.py
tests/: conftest.py  test_alert_formatter.py  test_amadeus_client.py  test_backtest.py  test_baseline_job.py  test_confidence.py  test_currency.py  test_detector.py  test_exports.py  test_fx_client.py  test_observation_writer.py  test_parser.py  test_poller.py  test_qa_rules.py  test_quota.py  test_scheduler.py  test_schema.py  test_seed_data.py  test_smoke.py  test_verifier.py  test_watchlist_loader.py  test_weekly_summary.py
(+51 files in other folders)
