[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "flight-deal-intelligence-wave1"
version = "0.1.0"
description = "Internal operations app for Wave1 flight deal intelligence."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "apscheduler>=3.10",
  "duckdb>=1.0",
  "httpx>=0.27",
  "pandas>=2.2",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "strict"
